@@ -3,9 +3,12 @@
 
 - enhance rsyncing to also sync permissions (stat().st_mode) 
   of directories and files. 
+  (should also resolve http://bitbucket.org/hpk42/py-trunk/issue/68/)
 - fix rsyncing of symlinks, thanks to Charles Solar 
   (should also resolve http://bitbucket.org/hpk42/py-trunk/issue/70/)
 - update usage of apipkg to 1.0b6
+- remote_exec(module) now makes sure that the linecache is updated
+  before reading and sending the source.  thanks Ronny, Matt. 
 - removed all trailing whitespace from source files
 
 1.0.7
